# vsr-player

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_zh.md  VP_VULKANINFO_NVIDIA_GeForce_RTX_5060_Ti_610_43_2_0.json  prototype.py  spike_pyav.py
archive/overlay-ui-v2/client/: CenterPlayButton.cpp  CenterPlayButton.h  ControlBar.cpp  ControlBar.h  IconButton.cpp  IconButton.h  IconProvider.cpp  IconProvider.h  MainWindow.cpp  MainWindow.h  PlaylistEngine.cpp  PlaylistEngine.h  PlaylistPanel.cpp  PlaylistPanel.h  QualityPopup.cpp  QualityPopup.h  TopBar.cpp  TopBar.h  main.cpp
archive/python-v1/vsr_player/: audio.py  nv12_to_rgb.py  renderer.py  vsr_pipeline.py
docs/: ARCHITECTURE.md  BUILD.md
docs/superpowers/plans/: 2026-06-18-vsr-player-prototype.md  2026-06-18-vsr-player-v2.md  2026-06-23-core-refactor.md  2026-06-23-cuda-vulkan-interop.md  2026-06-23-qt-quick-client-migration.md  2026-06-24-clean-api.md  2026-06-24-core-command-coalescing.md  2026-06-26-cleanup-docs-readme.md  2026-06-26-overlay-component-refactor.md  2026-06-26-playlist-performance.md  2026-06-26-quality-settings-redesign.md  2026-06-27-release-packaging.md
docs/superpowers/specs/: 2026-06-18-vsr-player-prototype-design.md  2026-06-18-vsr-player-v2-design.md  2026-06-23-core-refactor-design.md  2026-06-23-cuda-vulkan-interop-design.md  2026-06-23-overlay-ui-design.md  2026-06-24-clean-api-design.md  2026-06-24-core-command-coalescing.md  2026-06-25-deferred-texture-destruction.md  2026-06-25-overlay-ui-redesign.md  2026-06-25-viewmodel-ui-architecture.md  2026-06-26-cleanup-docs-readme-design.md  2026-06-26-osd-overlay-design.md  2026-06-26-overlay-component-refactor-design.md  2026-06-26-playlist-performance-design.md  2026-06-26-quality-settings-redesign.md  2026-06-26-release-packaging-design.md
scripts/: check-deps.sh  install.sh
src/client/: CMakeLists.txt  ControlBar.cpp  ControlBar.h  KeyFilter.cpp  KeyFilter.h  MainWindow.cpp  MainWindow.h  PlayerProxy.cpp  PlayerProxy.h  PlayerViewModel.cpp  PlayerViewModel.h  PlaylistEngine.cpp  PlaylistEngine.h  PlaylistPanel.cpp  PlaylistPanel.h  QtVulkanContext.cpp  QtVulkanContext.h  SettingsDialog.cpp  SettingsDialog.h  StatusBar.cpp  StatusBar.h  VulkanWidget.cpp  VulkanWidget.h  main.cpp
src/client/shaders/: nv12.frag  video.frag  video.vert
src/client/ui/: BottomBar.qml  CenterPlayBtn.qml  OsdOverlay.qml  PlaylistPanel.qml  ProgressSlider.qml  QualityPopup.qml  SpeedPopup.qml  TopBar.qml  VolumePopup.qml  overlay.qml
src/client/ui/components/: IconButton.qml
src/core/: AudioOutput.cpp  AudioOutput.h  CMakeLists.txt  ClockManager.cpp  ClockManager.h  CommandQueue.h  Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  FramePool.cpp  FramePool.h  PlayerCore.cpp  PlayerCore.h  Renderer.cpp  Renderer.h  VSRProcessor.cpp  VSRProcessor.h
src/core/api/: Player.h
src/core/utils/: CUDAContext.cpp  CUDAContext.h  InteropTexture.cpp  InteropTexture.h  NV12ToRGB.cpp  NV12ToRGB.h  SwapchainManager.cpp  SwapchainManager.h  VideoPipeline.cpp  VideoPipeline.h  VulkanContext.cpp  VulkanContext.h  VulkanRenderer.cpp  VulkanRenderer.h
src/vsr_player/: __init__.py  __main__.py  app.py  audio.py  config.py  decoder.py  nv12_to_rgb.py  overlay.py  renderer.py  vsr_pipeline.py
tests/: test_decoder.cpp  test_interop.cpp  test_pipeline.cpp
tests/test_qtquick_overlay/: overlay.qml  player_overlay.qml  quick_player.cpp  test_qtquick_overlay.cpp
